parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSOLUTE
    AND
    ARRAY
    ASM
    BREAK
    CASE
    CONSTRUCTOR
    CONTINUE
    DESTRUCTOR
    DIV
    DO
    DOWNTO
    EXTERNAL
    FILE
    FOR
    FORWARD
    GOTO
    IMPLEMENTATION
    IN
    INHERITED
    INLINE
    INTERFACE
    INTERRUPT
    LABEL
    MOD
    NIL
    NOT
    OF
    ON
    OPERATOR
    OR
    PACKED
    RECORD
    REPEAT
    SELF
    SET
    SHL
    SHR
    SINGLE_COMMENT
    TO
    UNIT
    UNTIL
    WHILE
    WITH
    XOR

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON uses_clause declaration_sections compound_stmt DOT
Rule 2     uses_clause -> USES id_list SEMICOLON
Rule 3     uses_clause -> empty
Rule 4     id_list -> ID
Rule 5     id_list -> id_list COMMA ID
Rule 6     declaration_sections -> declaration_sections section
Rule 7     declaration_sections -> empty
Rule 8     section -> const_section
Rule 9     section -> type_section
Rule 10    section -> var_section
Rule 11    section -> procedure_declaration
Rule 12    section -> function_declaration
Rule 13    const_section -> CONST const_list
Rule 14    const_list -> const_list ID EQUALS expression SEMICOLON
Rule 15    const_list -> ID EQUALS expression SEMICOLON
Rule 16    type_section -> TYPE type_list
Rule 17    type_section -> empty
Rule 18    type_list -> type_list ID EQUALS type_specifier SEMICOLON
Rule 19    type_list -> ID EQUALS type_specifier SEMICOLON
Rule 20    var_section -> VAR var_list
Rule 21    var_list -> var_list id_list COLON type_specifier SEMICOLON
Rule 22    var_list -> id_list COLON type_specifier SEMICOLON
Rule 23    type_specifier -> ID
Rule 24    type_specifier -> STRING LBRACKET NUMBER RBRACKET
Rule 25    type_specifier -> NUMBER DOT DOT NUMBER
Rule 26    procedure_declaration -> PROCEDURE ID LPAREN args RPAREN SEMICOLON compound_stmt SEMICOLON
Rule 27    function_declaration -> FUNCTION ID LPAREN args RPAREN COLON type_specifier SEMICOLON compound_stmt SEMICOLON
Rule 28    compound_stmt -> BEGIN statement_list END
Rule 29    statement_list -> statement_list statement
Rule 30    statement_list -> statement
Rule 31    if_stmt -> IF LPAREN expression RPAREN THEN statement
Rule 32    if_stmt -> IF LPAREN expression RPAREN THEN statement ELSE statement
Rule 33    statement -> call_stmt SEMICOLON
Rule 34    statement -> assignment_stmt SEMICOLON
Rule 35    statement -> compound_stmt
Rule 36    statement -> if_stmt
Rule 37    statement -> empty
Rule 38    call_stmt -> ID LPAREN args RPAREN
Rule 39    call_stmt -> ID
Rule 40    args -> expression_list
Rule 41    args -> empty
Rule 42    expression_list -> expression_list COMMA expression
Rule 43    expression_list -> expression
Rule 44    assignment_stmt -> ID ASSIGN expression
Rule 45    expression_formatted -> expression COLON type_specifier
Rule 46    expression -> term
Rule 47    expression -> expression PLUS term
Rule 48    expression -> expression MINUS term
Rule 49    expression -> expression TIMES term
Rule 50    expression -> expression DIVIDE term
Rule 51    expression -> expression GREATER term
Rule 52    expression -> expression LESS term
Rule 53    expression -> expression GREATEREQUAL term
Rule 54    expression -> expression LESSEQUAL term
Rule 55    expression -> expression NOTEQUAL term
Rule 56    expression -> expression_formatted
Rule 57    term -> ID
Rule 58    term -> NUMBER
Rule 59    term -> STRING
Rule 60    empty -> <empty>

Terminals, with rules where they appear

ABSOLUTE             : 
AND                  : 
ARRAY                : 
ASM                  : 
ASSIGN               : 44
BEGIN                : 28
BREAK                : 
CASE                 : 
COLON                : 21 22 27 45
COMMA                : 5 42
CONST                : 13
CONSTRUCTOR          : 
CONTINUE             : 
DESTRUCTOR           : 
DIV                  : 
DIVIDE               : 50
DO                   : 
DOT                  : 1 25 25
DOWNTO               : 
ELSE                 : 32
END                  : 28
EQUALS               : 14 15 18 19
EXTERNAL             : 
FILE                 : 
FOR                  : 
FORWARD              : 
FUNCTION             : 27
GOTO                 : 
GREATER              : 51
GREATEREQUAL         : 53
ID                   : 1 4 5 14 15 18 19 23 26 27 38 39 44 57
IF                   : 31 32
IMPLEMENTATION       : 
IN                   : 
INHERITED            : 
INLINE               : 
INTERFACE            : 
INTERRUPT            : 
LABEL                : 
LBRACKET             : 24
LESS                 : 52
LESSEQUAL            : 54
LPAREN               : 26 27 31 32 38
MINUS                : 48
MOD                  : 
NIL                  : 
NOT                  : 
NOTEQUAL             : 55
NUMBER               : 24 25 25 58
OF                   : 
ON                   : 
OPERATOR             : 
OR                   : 
PACKED               : 
PLUS                 : 47
PROCEDURE            : 26
PROGRAM              : 1
RBRACKET             : 24
RECORD               : 
REPEAT               : 
RPAREN               : 26 27 31 32 38
SELF                 : 
SEMICOLON            : 1 2 14 15 18 19 21 22 26 26 27 27 33 34
SET                  : 
SHL                  : 
SHR                  : 
SINGLE_COMMENT       : 
STRING               : 24 59
THEN                 : 31 32
TIMES                : 49
TO                   : 
TYPE                 : 16
UNIT                 : 
UNTIL                : 
USES                 : 2
VAR                  : 20
WHILE                : 
WITH                 : 
XOR                  : 
error                : 

Nonterminals, with rules where they appear

args                 : 26 27 38
assignment_stmt      : 34
call_stmt            : 33
compound_stmt        : 1 26 27 35
const_list           : 13 14
const_section        : 8
declaration_sections : 1 6
empty                : 3 7 17 37 41
expression           : 14 15 31 32 42 43 44 45 47 48 49 50 51 52 53 54 55
expression_formatted : 56
expression_list      : 40 42
function_declaration : 12
id_list              : 2 5 21 22
if_stmt              : 36
procedure_declaration : 11
program              : 0
section              : 6
statement            : 29 30 31 32 32
statement_list       : 28 29
term                 : 46 47 48 49 50 51 52 53 54 55
type_list            : 16 18
type_section         : 9
type_specifier       : 18 19 21 22 27 45
uses_clause          : 1
var_list             : 20 21
var_section          : 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON uses_clause declaration_sections compound_stmt DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON uses_clause declaration_sections compound_stmt DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON uses_clause declaration_sections compound_stmt DOT

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . uses_clause declaration_sections compound_stmt DOT
    (2) uses_clause -> . USES id_list SEMICOLON
    (3) uses_clause -> . empty
    (60) empty -> .

    USES            shift and go to state 6
    BEGIN           reduce using rule 60 (empty -> .)
    CONST           reduce using rule 60 (empty -> .)
    TYPE            reduce using rule 60 (empty -> .)
    VAR             reduce using rule 60 (empty -> .)
    PROCEDURE       reduce using rule 60 (empty -> .)
    FUNCTION        reduce using rule 60 (empty -> .)

    uses_clause                    shift and go to state 5
    empty                          shift and go to state 7

state 5

    (1) program -> PROGRAM ID SEMICOLON uses_clause . declaration_sections compound_stmt DOT
    (6) declaration_sections -> . declaration_sections section
    (7) declaration_sections -> . empty
    (60) empty -> .

    BEGIN           reduce using rule 60 (empty -> .)
    CONST           reduce using rule 60 (empty -> .)
    TYPE            reduce using rule 60 (empty -> .)
    VAR             reduce using rule 60 (empty -> .)
    PROCEDURE       reduce using rule 60 (empty -> .)
    FUNCTION        reduce using rule 60 (empty -> .)

    declaration_sections           shift and go to state 8
    empty                          shift and go to state 9

state 6

    (2) uses_clause -> USES . id_list SEMICOLON
    (4) id_list -> . ID
    (5) id_list -> . id_list COMMA ID

    ID              shift and go to state 11

    id_list                        shift and go to state 10

state 7

    (3) uses_clause -> empty .

    BEGIN           reduce using rule 3 (uses_clause -> empty .)
    CONST           reduce using rule 3 (uses_clause -> empty .)
    TYPE            reduce using rule 3 (uses_clause -> empty .)
    VAR             reduce using rule 3 (uses_clause -> empty .)
    PROCEDURE       reduce using rule 3 (uses_clause -> empty .)
    FUNCTION        reduce using rule 3 (uses_clause -> empty .)


state 8

    (1) program -> PROGRAM ID SEMICOLON uses_clause declaration_sections . compound_stmt DOT
    (6) declaration_sections -> declaration_sections . section
    (28) compound_stmt -> . BEGIN statement_list END
    (8) section -> . const_section
    (9) section -> . type_section
    (10) section -> . var_section
    (11) section -> . procedure_declaration
    (12) section -> . function_declaration
    (13) const_section -> . CONST const_list
    (16) type_section -> . TYPE type_list
    (17) type_section -> . empty
    (20) var_section -> . VAR var_list
    (26) procedure_declaration -> . PROCEDURE ID LPAREN args RPAREN SEMICOLON compound_stmt SEMICOLON
    (27) function_declaration -> . FUNCTION ID LPAREN args RPAREN COLON type_specifier SEMICOLON compound_stmt SEMICOLON
    (60) empty -> .

  ! shift/reduce conflict for BEGIN resolved as shift
  ! shift/reduce conflict for CONST resolved as shift
  ! shift/reduce conflict for TYPE resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for PROCEDURE resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
    BEGIN           shift and go to state 14
    CONST           shift and go to state 20
    TYPE            shift and go to state 21
    VAR             shift and go to state 23
    PROCEDURE       shift and go to state 24
    FUNCTION        shift and go to state 25

  ! BEGIN           [ reduce using rule 60 (empty -> .) ]
  ! CONST           [ reduce using rule 60 (empty -> .) ]
  ! TYPE            [ reduce using rule 60 (empty -> .) ]
  ! VAR             [ reduce using rule 60 (empty -> .) ]
  ! PROCEDURE       [ reduce using rule 60 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 60 (empty -> .) ]

    compound_stmt                  shift and go to state 12
    section                        shift and go to state 13
    const_section                  shift and go to state 15
    type_section                   shift and go to state 16
    var_section                    shift and go to state 17
    procedure_declaration          shift and go to state 18
    function_declaration           shift and go to state 19
    empty                          shift and go to state 22

state 9

    (7) declaration_sections -> empty .

    BEGIN           reduce using rule 7 (declaration_sections -> empty .)
    CONST           reduce using rule 7 (declaration_sections -> empty .)
    TYPE            reduce using rule 7 (declaration_sections -> empty .)
    VAR             reduce using rule 7 (declaration_sections -> empty .)
    PROCEDURE       reduce using rule 7 (declaration_sections -> empty .)
    FUNCTION        reduce using rule 7 (declaration_sections -> empty .)


state 10

    (2) uses_clause -> USES id_list . SEMICOLON
    (5) id_list -> id_list . COMMA ID

    SEMICOLON       shift and go to state 26
    COMMA           shift and go to state 27


state 11

    (4) id_list -> ID .

    SEMICOLON       reduce using rule 4 (id_list -> ID .)
    COMMA           reduce using rule 4 (id_list -> ID .)
    COLON           reduce using rule 4 (id_list -> ID .)


state 12

    (1) program -> PROGRAM ID SEMICOLON uses_clause declaration_sections compound_stmt . DOT

    DOT             shift and go to state 28


state 13

    (6) declaration_sections -> declaration_sections section .

    BEGIN           reduce using rule 6 (declaration_sections -> declaration_sections section .)
    CONST           reduce using rule 6 (declaration_sections -> declaration_sections section .)
    TYPE            reduce using rule 6 (declaration_sections -> declaration_sections section .)
    VAR             reduce using rule 6 (declaration_sections -> declaration_sections section .)
    PROCEDURE       reduce using rule 6 (declaration_sections -> declaration_sections section .)
    FUNCTION        reduce using rule 6 (declaration_sections -> declaration_sections section .)


state 14

    (28) compound_stmt -> BEGIN . statement_list END
    (29) statement_list -> . statement_list statement
    (30) statement_list -> . statement
    (33) statement -> . call_stmt SEMICOLON
    (34) statement -> . assignment_stmt SEMICOLON
    (35) statement -> . compound_stmt
    (36) statement -> . if_stmt
    (37) statement -> . empty
    (38) call_stmt -> . ID LPAREN args RPAREN
    (39) call_stmt -> . ID
    (44) assignment_stmt -> . ID ASSIGN expression
    (28) compound_stmt -> . BEGIN statement_list END
    (31) if_stmt -> . IF LPAREN expression RPAREN THEN statement
    (32) if_stmt -> . IF LPAREN expression RPAREN THEN statement ELSE statement
    (60) empty -> .

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for BEGIN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
    ID              shift and go to state 36
    BEGIN           shift and go to state 14
    IF              shift and go to state 37
    END             reduce using rule 60 (empty -> .)

  ! ID              [ reduce using rule 60 (empty -> .) ]
  ! BEGIN           [ reduce using rule 60 (empty -> .) ]
  ! IF              [ reduce using rule 60 (empty -> .) ]

    statement_list                 shift and go to state 29
    statement                      shift and go to state 30
    call_stmt                      shift and go to state 31
    assignment_stmt                shift and go to state 32
    compound_stmt                  shift and go to state 33
    if_stmt                        shift and go to state 34
    empty                          shift and go to state 35

state 15

    (8) section -> const_section .

    BEGIN           reduce using rule 8 (section -> const_section .)
    CONST           reduce using rule 8 (section -> const_section .)
    TYPE            reduce using rule 8 (section -> const_section .)
    VAR             reduce using rule 8 (section -> const_section .)
    PROCEDURE       reduce using rule 8 (section -> const_section .)
    FUNCTION        reduce using rule 8 (section -> const_section .)


state 16

    (9) section -> type_section .

    BEGIN           reduce using rule 9 (section -> type_section .)
    CONST           reduce using rule 9 (section -> type_section .)
    TYPE            reduce using rule 9 (section -> type_section .)
    VAR             reduce using rule 9 (section -> type_section .)
    PROCEDURE       reduce using rule 9 (section -> type_section .)
    FUNCTION        reduce using rule 9 (section -> type_section .)


state 17

    (10) section -> var_section .

    BEGIN           reduce using rule 10 (section -> var_section .)
    CONST           reduce using rule 10 (section -> var_section .)
    TYPE            reduce using rule 10 (section -> var_section .)
    VAR             reduce using rule 10 (section -> var_section .)
    PROCEDURE       reduce using rule 10 (section -> var_section .)
    FUNCTION        reduce using rule 10 (section -> var_section .)


state 18

    (11) section -> procedure_declaration .

    BEGIN           reduce using rule 11 (section -> procedure_declaration .)
    CONST           reduce using rule 11 (section -> procedure_declaration .)
    TYPE            reduce using rule 11 (section -> procedure_declaration .)
    VAR             reduce using rule 11 (section -> procedure_declaration .)
    PROCEDURE       reduce using rule 11 (section -> procedure_declaration .)
    FUNCTION        reduce using rule 11 (section -> procedure_declaration .)


state 19

    (12) section -> function_declaration .

    BEGIN           reduce using rule 12 (section -> function_declaration .)
    CONST           reduce using rule 12 (section -> function_declaration .)
    TYPE            reduce using rule 12 (section -> function_declaration .)
    VAR             reduce using rule 12 (section -> function_declaration .)
    PROCEDURE       reduce using rule 12 (section -> function_declaration .)
    FUNCTION        reduce using rule 12 (section -> function_declaration .)


state 20

    (13) const_section -> CONST . const_list
    (14) const_list -> . const_list ID EQUALS expression SEMICOLON
    (15) const_list -> . ID EQUALS expression SEMICOLON

    ID              shift and go to state 39

    const_list                     shift and go to state 38

state 21

    (16) type_section -> TYPE . type_list
    (18) type_list -> . type_list ID EQUALS type_specifier SEMICOLON
    (19) type_list -> . ID EQUALS type_specifier SEMICOLON

    ID              shift and go to state 41

    type_list                      shift and go to state 40

state 22

    (17) type_section -> empty .

    BEGIN           reduce using rule 17 (type_section -> empty .)
    CONST           reduce using rule 17 (type_section -> empty .)
    TYPE            reduce using rule 17 (type_section -> empty .)
    VAR             reduce using rule 17 (type_section -> empty .)
    PROCEDURE       reduce using rule 17 (type_section -> empty .)
    FUNCTION        reduce using rule 17 (type_section -> empty .)


state 23

    (20) var_section -> VAR . var_list
    (21) var_list -> . var_list id_list COLON type_specifier SEMICOLON
    (22) var_list -> . id_list COLON type_specifier SEMICOLON
    (4) id_list -> . ID
    (5) id_list -> . id_list COMMA ID

    ID              shift and go to state 11

    var_list                       shift and go to state 42
    id_list                        shift and go to state 43

state 24

    (26) procedure_declaration -> PROCEDURE . ID LPAREN args RPAREN SEMICOLON compound_stmt SEMICOLON

    ID              shift and go to state 44


state 25

    (27) function_declaration -> FUNCTION . ID LPAREN args RPAREN COLON type_specifier SEMICOLON compound_stmt SEMICOLON

    ID              shift and go to state 45


state 26

    (2) uses_clause -> USES id_list SEMICOLON .

    BEGIN           reduce using rule 2 (uses_clause -> USES id_list SEMICOLON .)
    CONST           reduce using rule 2 (uses_clause -> USES id_list SEMICOLON .)
    TYPE            reduce using rule 2 (uses_clause -> USES id_list SEMICOLON .)
    VAR             reduce using rule 2 (uses_clause -> USES id_list SEMICOLON .)
    PROCEDURE       reduce using rule 2 (uses_clause -> USES id_list SEMICOLON .)
    FUNCTION        reduce using rule 2 (uses_clause -> USES id_list SEMICOLON .)


state 27

    (5) id_list -> id_list COMMA . ID

    ID              shift and go to state 46


state 28

    (1) program -> PROGRAM ID SEMICOLON uses_clause declaration_sections compound_stmt DOT .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON uses_clause declaration_sections compound_stmt DOT .)


state 29

    (28) compound_stmt -> BEGIN statement_list . END
    (29) statement_list -> statement_list . statement
    (33) statement -> . call_stmt SEMICOLON
    (34) statement -> . assignment_stmt SEMICOLON
    (35) statement -> . compound_stmt
    (36) statement -> . if_stmt
    (37) statement -> . empty
    (38) call_stmt -> . ID LPAREN args RPAREN
    (39) call_stmt -> . ID
    (44) assignment_stmt -> . ID ASSIGN expression
    (28) compound_stmt -> . BEGIN statement_list END
    (31) if_stmt -> . IF LPAREN expression RPAREN THEN statement
    (32) if_stmt -> . IF LPAREN expression RPAREN THEN statement ELSE statement
    (60) empty -> .

  ! shift/reduce conflict for END resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for BEGIN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
    END             shift and go to state 47
    ID              shift and go to state 36
    BEGIN           shift and go to state 14
    IF              shift and go to state 37

  ! END             [ reduce using rule 60 (empty -> .) ]
  ! ID              [ reduce using rule 60 (empty -> .) ]
  ! BEGIN           [ reduce using rule 60 (empty -> .) ]
  ! IF              [ reduce using rule 60 (empty -> .) ]

    statement                      shift and go to state 48
    call_stmt                      shift and go to state 31
    assignment_stmt                shift and go to state 32
    compound_stmt                  shift and go to state 33
    if_stmt                        shift and go to state 34
    empty                          shift and go to state 35

state 30

    (30) statement_list -> statement .

    END             reduce using rule 30 (statement_list -> statement .)
    ID              reduce using rule 30 (statement_list -> statement .)
    BEGIN           reduce using rule 30 (statement_list -> statement .)
    IF              reduce using rule 30 (statement_list -> statement .)


state 31

    (33) statement -> call_stmt . SEMICOLON

    SEMICOLON       shift and go to state 49


state 32

    (34) statement -> assignment_stmt . SEMICOLON

    SEMICOLON       shift and go to state 50


state 33

    (35) statement -> compound_stmt .

    END             reduce using rule 35 (statement -> compound_stmt .)
    ID              reduce using rule 35 (statement -> compound_stmt .)
    BEGIN           reduce using rule 35 (statement -> compound_stmt .)
    IF              reduce using rule 35 (statement -> compound_stmt .)
    ELSE            reduce using rule 35 (statement -> compound_stmt .)


state 34

    (36) statement -> if_stmt .

    END             reduce using rule 36 (statement -> if_stmt .)
    ID              reduce using rule 36 (statement -> if_stmt .)
    BEGIN           reduce using rule 36 (statement -> if_stmt .)
    IF              reduce using rule 36 (statement -> if_stmt .)
    ELSE            reduce using rule 36 (statement -> if_stmt .)


state 35

    (37) statement -> empty .

    END             reduce using rule 37 (statement -> empty .)
    ID              reduce using rule 37 (statement -> empty .)
    BEGIN           reduce using rule 37 (statement -> empty .)
    IF              reduce using rule 37 (statement -> empty .)
    ELSE            reduce using rule 37 (statement -> empty .)


state 36

    (38) call_stmt -> ID . LPAREN args RPAREN
    (39) call_stmt -> ID .
    (44) assignment_stmt -> ID . ASSIGN expression

    LPAREN          shift and go to state 51
    SEMICOLON       reduce using rule 39 (call_stmt -> ID .)
    ASSIGN          shift and go to state 52


state 37

    (31) if_stmt -> IF . LPAREN expression RPAREN THEN statement
    (32) if_stmt -> IF . LPAREN expression RPAREN THEN statement ELSE statement

    LPAREN          shift and go to state 53


state 38

    (13) const_section -> CONST const_list .
    (14) const_list -> const_list . ID EQUALS expression SEMICOLON

    BEGIN           reduce using rule 13 (const_section -> CONST const_list .)
    CONST           reduce using rule 13 (const_section -> CONST const_list .)
    TYPE            reduce using rule 13 (const_section -> CONST const_list .)
    VAR             reduce using rule 13 (const_section -> CONST const_list .)
    PROCEDURE       reduce using rule 13 (const_section -> CONST const_list .)
    FUNCTION        reduce using rule 13 (const_section -> CONST const_list .)
    ID              shift and go to state 54


state 39

    (15) const_list -> ID . EQUALS expression SEMICOLON

    EQUALS          shift and go to state 55


state 40

    (16) type_section -> TYPE type_list .
    (18) type_list -> type_list . ID EQUALS type_specifier SEMICOLON

    BEGIN           reduce using rule 16 (type_section -> TYPE type_list .)
    CONST           reduce using rule 16 (type_section -> TYPE type_list .)
    TYPE            reduce using rule 16 (type_section -> TYPE type_list .)
    VAR             reduce using rule 16 (type_section -> TYPE type_list .)
    PROCEDURE       reduce using rule 16 (type_section -> TYPE type_list .)
    FUNCTION        reduce using rule 16 (type_section -> TYPE type_list .)
    ID              shift and go to state 56


state 41

    (19) type_list -> ID . EQUALS type_specifier SEMICOLON

    EQUALS          shift and go to state 57


state 42

    (20) var_section -> VAR var_list .
    (21) var_list -> var_list . id_list COLON type_specifier SEMICOLON
    (4) id_list -> . ID
    (5) id_list -> . id_list COMMA ID

    BEGIN           reduce using rule 20 (var_section -> VAR var_list .)
    CONST           reduce using rule 20 (var_section -> VAR var_list .)
    TYPE            reduce using rule 20 (var_section -> VAR var_list .)
    VAR             reduce using rule 20 (var_section -> VAR var_list .)
    PROCEDURE       reduce using rule 20 (var_section -> VAR var_list .)
    FUNCTION        reduce using rule 20 (var_section -> VAR var_list .)
    ID              shift and go to state 11

    id_list                        shift and go to state 58

state 43

    (22) var_list -> id_list . COLON type_specifier SEMICOLON
    (5) id_list -> id_list . COMMA ID

    COLON           shift and go to state 59
    COMMA           shift and go to state 27


state 44

    (26) procedure_declaration -> PROCEDURE ID . LPAREN args RPAREN SEMICOLON compound_stmt SEMICOLON

    LPAREN          shift and go to state 60


state 45

    (27) function_declaration -> FUNCTION ID . LPAREN args RPAREN COLON type_specifier SEMICOLON compound_stmt SEMICOLON

    LPAREN          shift and go to state 61


state 46

    (5) id_list -> id_list COMMA ID .

    SEMICOLON       reduce using rule 5 (id_list -> id_list COMMA ID .)
    COMMA           reduce using rule 5 (id_list -> id_list COMMA ID .)
    COLON           reduce using rule 5 (id_list -> id_list COMMA ID .)


state 47

    (28) compound_stmt -> BEGIN statement_list END .

    DOT             reduce using rule 28 (compound_stmt -> BEGIN statement_list END .)
    END             reduce using rule 28 (compound_stmt -> BEGIN statement_list END .)
    ID              reduce using rule 28 (compound_stmt -> BEGIN statement_list END .)
    BEGIN           reduce using rule 28 (compound_stmt -> BEGIN statement_list END .)
    IF              reduce using rule 28 (compound_stmt -> BEGIN statement_list END .)
    ELSE            reduce using rule 28 (compound_stmt -> BEGIN statement_list END .)
    SEMICOLON       reduce using rule 28 (compound_stmt -> BEGIN statement_list END .)


state 48

    (29) statement_list -> statement_list statement .

    END             reduce using rule 29 (statement_list -> statement_list statement .)
    ID              reduce using rule 29 (statement_list -> statement_list statement .)
    BEGIN           reduce using rule 29 (statement_list -> statement_list statement .)
    IF              reduce using rule 29 (statement_list -> statement_list statement .)


state 49

    (33) statement -> call_stmt SEMICOLON .

    END             reduce using rule 33 (statement -> call_stmt SEMICOLON .)
    ID              reduce using rule 33 (statement -> call_stmt SEMICOLON .)
    BEGIN           reduce using rule 33 (statement -> call_stmt SEMICOLON .)
    IF              reduce using rule 33 (statement -> call_stmt SEMICOLON .)
    ELSE            reduce using rule 33 (statement -> call_stmt SEMICOLON .)


state 50

    (34) statement -> assignment_stmt SEMICOLON .

    END             reduce using rule 34 (statement -> assignment_stmt SEMICOLON .)
    ID              reduce using rule 34 (statement -> assignment_stmt SEMICOLON .)
    BEGIN           reduce using rule 34 (statement -> assignment_stmt SEMICOLON .)
    IF              reduce using rule 34 (statement -> assignment_stmt SEMICOLON .)
    ELSE            reduce using rule 34 (statement -> assignment_stmt SEMICOLON .)


state 51

    (38) call_stmt -> ID LPAREN . args RPAREN
    (40) args -> . expression_list
    (41) args -> . empty
    (42) expression_list -> . expression_list COMMA expression
    (43) expression_list -> . expression
    (60) empty -> .
    (46) expression -> . term
    (47) expression -> . expression PLUS term
    (48) expression -> . expression MINUS term
    (49) expression -> . expression TIMES term
    (50) expression -> . expression DIVIDE term
    (51) expression -> . expression GREATER term
    (52) expression -> . expression LESS term
    (53) expression -> . expression GREATEREQUAL term
    (54) expression -> . expression LESSEQUAL term
    (55) expression -> . expression NOTEQUAL term
    (56) expression -> . expression_formatted
    (57) term -> . ID
    (58) term -> . NUMBER
    (59) term -> . STRING
    (45) expression_formatted -> . expression COLON type_specifier

    RPAREN          reduce using rule 60 (empty -> .)
    ID              shift and go to state 62
    NUMBER          shift and go to state 69
    STRING          shift and go to state 70

    args                           shift and go to state 63
    expression_list                shift and go to state 64
    empty                          shift and go to state 65
    expression                     shift and go to state 66
    term                           shift and go to state 67
    expression_formatted           shift and go to state 68

state 52

    (44) assignment_stmt -> ID ASSIGN . expression
    (46) expression -> . term
    (47) expression -> . expression PLUS term
    (48) expression -> . expression MINUS term
    (49) expression -> . expression TIMES term
    (50) expression -> . expression DIVIDE term
    (51) expression -> . expression GREATER term
    (52) expression -> . expression LESS term
    (53) expression -> . expression GREATEREQUAL term
    (54) expression -> . expression LESSEQUAL term
    (55) expression -> . expression NOTEQUAL term
    (56) expression -> . expression_formatted
    (57) term -> . ID
    (58) term -> . NUMBER
    (59) term -> . STRING
    (45) expression_formatted -> . expression COLON type_specifier

    ID              shift and go to state 62
    NUMBER          shift and go to state 69
    STRING          shift and go to state 70

    expression                     shift and go to state 71
    term                           shift and go to state 67
    expression_formatted           shift and go to state 68

state 53

    (31) if_stmt -> IF LPAREN . expression RPAREN THEN statement
    (32) if_stmt -> IF LPAREN . expression RPAREN THEN statement ELSE statement
    (46) expression -> . term
    (47) expression -> . expression PLUS term
    (48) expression -> . expression MINUS term
    (49) expression -> . expression TIMES term
    (50) expression -> . expression DIVIDE term
    (51) expression -> . expression GREATER term
    (52) expression -> . expression LESS term
    (53) expression -> . expression GREATEREQUAL term
    (54) expression -> . expression LESSEQUAL term
    (55) expression -> . expression NOTEQUAL term
    (56) expression -> . expression_formatted
    (57) term -> . ID
    (58) term -> . NUMBER
    (59) term -> . STRING
    (45) expression_formatted -> . expression COLON type_specifier

    ID              shift and go to state 62
    NUMBER          shift and go to state 69
    STRING          shift and go to state 70

    expression                     shift and go to state 72
    term                           shift and go to state 67
    expression_formatted           shift and go to state 68

state 54

    (14) const_list -> const_list ID . EQUALS expression SEMICOLON
